@@ -1,11 +1,12 @@
 Current Version: @@VERSION@@
 
-ctags-5.5.3 (Sun Dec 14 2003)
+ctags-5.5.3 (Fri Dec 19 2003)
 * Removed forgotten debug statement [Bug #811704].
 * Fixed problem destroying tag file with certain info options [Bug #845502].
 * Fixed portability problem [DJGPP].
 * Fixed problem of double characters in signature field [Bug #852368].
 * Fixed problem manifested by errant preprocessor conditionals [Bug #839162].
+* Fixed incorrect line address in tag file for SQL tags [Bug #823000].
 
 ctags-5.5.2 (Wed Sep 17 2003)
 * Added tags for local variables for C-based languages [C/C++/C#/Java/Vera,
